Added perf tests